Added routing and some more css

--- a/client/src/components/pages/Login.module.css
+++ b/client/src/components/pages/Login.module.css
@@ -1,3 +1,17 @@
+.header {
+   background-color: rgba(0, 0, 0, 0.8);
+   /* border-radius: 35px; */
+   color: #fff;
+}
+
+.header h1 {
+   text-align: center;
+   font-size: 70px;
+   font-weight: 600;
+   color: white;
+   -webkit-text-stroke: 2px black;
+}
+
 .login-page {
    text-align: center;
    margin-top: 5px;
@@ -8,7 +22,7 @@
 .login-form {
    padding-top: 1%;
    display: inline-block;
-   margin-top: 5%;
+   margin-top: 1%;
    background: rgba(0, 0, 0, 0.703);
    width: 40%;
    border: 1px solid white;
