--- a/client/src/components/pages/BrowseCars.module.css
+++ b/client/src/components/pages/BrowseCars.module.css
@@ -1,101 +1,115 @@
 @import url('https://fonts.google.com/specimen/Roboto+Condensed');
 
 a {
-    text-decoration: none;
-    color: white;
+   text-decoration: none;
+   color: white;
 }
 
-input[type=submit]:hover, ul>li:hover {
-    cursor: pointer;
-    transform: scale(1.1);
+input[type='submit']:hover,
+ul > li:hover {
+   cursor: pointer;
+   transform: scale(1.1);
 }
 
 img {
-    width: 35px;
-    height: 35px;
-    margin-top: 25px;
+   width: 35px;
+   height: 35px;
+   margin-top: 25px;
 }
 
+.header {
+   background-color: rgba(0, 0, 0, 0.8);
+   /* border-radius: 35px; */
+   color: #fff;
+}
+
+.header h1 {
+   text-align: center;
+   font-size: 70px;
+   font-weight: 600;
+   color: white;
+   -webkit-text-stroke: 2px black;
+}
 h2 {
-    font-size: 50px;
-    margin: 0;
+   font-size: 50px;
+   margin: 0;
 }
 
 label {
-    color: gray;
-    font-size: 25px;
+   color: gray;
+   font-size: 25px;
 }
 
 section {
-    text-align: center;
-    margin-top: 5px;
-    position: relative;
-    padding-bottom: 6px;
+   text-align: center;
+   margin-top: 5px;
+   position: relative;
+   padding-bottom: 6px;
 }
 
 form {
-    text-align: center;
+   text-align: center;
 }
 
 input {
-    display: block;
-    margin: 10px auto;
-    width: 200px;
-    border: 2px solid lightsteelblue;
-    padding: 5px;
+   display: block;
+   margin: 10px auto;
+   width: 200px;
+   border: 2px solid lightsteelblue;
+   padding: 5px;
 }
 
-#viewCatalog{
-    margin-bottom: 5%;
-    margin-top: 3%;
+#viewCatalog {
+   margin-bottom: 5%;
+   margin-top: 3%;
 }
 
 .added-cars-in-market {
-    color: white;
-    cursor: pointer;
-    width: 500px;
-    border: 2px solid white;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.703);
-    padding-bottom: 10px;
-    border-radius: 10px;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    margin-top: 10px;
-    height: 300px;
+   color: white;
+   cursor: pointer;
+   width: 500px;
+   border: 2px solid white;
+   text-align: center;
+   background: rgba(0, 0, 0, 0.703);
+   padding-bottom: 10px;
+   border-radius: 10px;
+   margin-left: 20px;
+   margin-bottom: 20px;
+   margin-top: 10px;
+   height: 300px;
 }
 
 .picture-added-cars {
-    width: 430px;
-    height: 200px;
-    /* border-radius: 50%; */
+   width: 430px;
+   height: 200px;
+   /* border-radius: 50%; */
 }
 
 .picture-added-cars:hover {
-    cursor: pointer;
-    transform: scale(1.1);
+   cursor: pointer;
+   transform: scale(1.1);
 }
 
 .added-cars {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+   display: flex;
+   justify-content: space-around;
+   flex-wrap: wrap;
 }
 
 h3 {
-    font-size: 22px;
-    margin-bottom: 0;
+   font-size: 22px;
+   margin-bottom: 0;
 }
 
 .guest {
-    text-align: center;
-    position: relative;
-    margin: 0 auto;
-    margin-top: 10%;
-    color: white;
-    background: rgba(0, 0, 0, 0.703);
-    padding: 40px;
-    width: 30%;
-    font-size: 30px;
-    border: 2px solid white;
+   text-align: center;
+   position: relative;
+   margin: 0 auto;
+   margin-top: 10%;
+   color: white;
+   background: rgba(0, 0, 0, 0.703);
+   padding: 40px;
+   width: 30%;
+   font-size: 30px;
+   border: 2px solid white;
 }
