--- a/client/src/components/pages/Car/BrowseCars.module.css
+++ b/client/src/components/pages/Car/BrowseCars.module.css
@@ -19,7 +19,6 @@ img {
 
 .header {
    background-color: rgba(0, 0, 0, 0.8);
-   /* border-radius: 35px; */
    color: #fff;
 }
 
@@ -101,7 +100,7 @@ h3 {
    margin-bottom: 0;
 }
 
-.guest {
+.no-cars {
    text-align: center;
    position: relative;
    margin: 0 auto;
