--- a/client/src/components/pages/car/details/Details.module.css
+++ b/client/src/components/pages/car/details/Details.module.css
@@ -76,11 +76,8 @@
    font-size: 20px;
 }
 
-.buttons a {
-   color: black;
-   margin-top: 5%;
-   margin-bottom: 5%;
-   width: 40%;
+button {
+   margin: 0%, 10%, 0%, 10%;
    font-size: 20px;
    background-color: white;
    border: 1px solid black;
