--- a/client/src/components/pages/car/details/Details.module.css
+++ b/client/src/components/pages/car/details/Details.module.css
@@ -76,9 +76,11 @@
    font-size: 20px;
 }
 
-button {
-   margin: 0%, 10%, 0%, 10%;
+.button {
+   color: black;
    font-size: 20px;
+   font-weight: bold;
+   cursor: pointer;
    background-color: white;
    border: 1px solid black;
    border-radius: 10px;
