--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -2,12 +2,8 @@
    text-align: center;
    text-transform: uppercase;
    font-weight: 500;
-   border-radius: 57px;
    background-color: black;
-   border-top: 15px solid;
-   border-right: 10px solid;
-   border-bottom: 10px solid;
-   border-left: 10px solid;
+   margin: 0px;
 }
 .menu-4 * {
    box-sizing: border-box;
@@ -26,7 +22,7 @@
    position: relative;
    display: inline-block;
    letter-spacing: 1px;
-   margin: 0;
+   margin: 7px;
    text-decoration: none;
 }
 .menu-4 a:before,
