--- a/client/src/components/pages/car/details/Details.module.css
+++ b/client/src/components/pages/car/details/Details.module.css
@@ -1,15 +1,3 @@
-.header {
-   background-color: rgba(0, 0, 0, 0.8);
-   color: #fff;
-}
-
-.header h1 {
-   text-align: center;
-   font-size: 70px;
-   font-weight: 600;
-   color: white;
-   -webkit-text-stroke: 2px black;
-}
 .details-page {
    text-align: center;
    margin-top: 5px;
@@ -47,6 +35,7 @@
    color: white;
    letter-spacing: 1px;
    display: inline-block;
+   font-weight: bold;
 }
 
 .info img {
