--- a/client/src/components/pages/car/sell-car/SellCar.module.css
+++ b/client/src/components/pages/car/sell-car/SellCar.module.css
@@ -1,15 +1,3 @@
-.header {
-   background-color: rgba(0, 0, 0, 0.8);
-   color: #fff;
-}
-
-.header h1 {
-   text-align: center;
-   font-size: 70px;
-   font-weight: 600;
-   color: white;
-   -webkit-text-stroke: 2px black;
-}
 .create-page {
    text-align: center;
    margin-top: 5px;
@@ -28,20 +16,28 @@
 }
 
 .create-form label {
-   margin-top: 20px;
-   margin-bottom: 20px;
+   margin-top: 10px;
+   margin-bottom: 10px;
    color: white;
    font-weight: bold;
+   font-size: 25px;
 }
 
 .create-form input {
+   margin-left: 33%;
    background: white;
    border: 1px solid black;
    border-radius: 10px;
    font-size: 16px;
+   display: block;
+   margin: 10px auto;
+   width: 200px;
+   border: 2px solid lightsteelblue;
+   padding: 5px;
 }
 
 .create-form input[type='submit'] {
+   margin-left: 30%;
    margin-top: 5%;
    margin-bottom: 5%;
    width: 40%;
