--- a/client/src/components/pages/tuning/CreateParts.module.css
+++ b/client/src/components/pages/tuning/CreateParts.module.css
@@ -1,16 +1,3 @@
-.header {
-   background-color: rgba(0, 0, 0, 0.8);
-   /* border-radius: 35px; */
-   color: #fff;
-}
-
-.header h1 {
-   text-align: center;
-   font-size: 70px;
-   font-weight: 600;
-   color: white;
-   -webkit-text-stroke: 2px black;
-}
 .create-page {
    text-align: center;
    margin-top: 5px;
@@ -32,6 +19,7 @@ label {
    margin-bottom: 20px;
    color: white;
    font-weight: bold;
+   display: block;
 }
 
 input {
