--- a/client/src/main.css
+++ b/client/src/main.css
@@ -9,6 +9,24 @@ body {
    font-family: Arial, Helvetica, sans-serif;
 }
 
+.header {
+   background-color: rgba(0, 0, 0, 0.8);
+   color: #fff;
+}
+
+.header h1 {
+   text-align: center;
+   font-size: 70px;
+   font-weight: 600;
+   color: white;
+   -webkit-text-stroke: 2px black;
+}
+
 li{
    list-style: none;
+}
+
+a{
+   text-decoration: none;
+   color: white;
 }
