[DCC]-[PART2] refactor css

--- a/client/src/components/pages/register/Register.module.css
+++ b/client/src/components/pages/register/Register.module.css
@@ -16,18 +16,28 @@
 }
 
 label {
-   margin-top: 20px;
-   margin-bottom: 20px;
+   margin-top: 10px;
+   margin-bottom: 10px;
    color: white;
    font-weight: bold;
+   font-size: 25px;
 }
- input {
+
+input {
+   margin-left: 33%;
    background: white;
    border: 1px solid black;
    border-radius: 10px;
    font-size: 16px;
+   display: block;
+   margin: 2px auto;
+   width: 200px;
+   border: 2px solid lightsteelblue;
+   padding: 5px;
 }
- input[type='submit'] {
+
+input[type='submit'] {
+   margin-left: 30%;
    margin-top: 5%;
    margin-bottom: 5%;
    width: 40%;
