--- a/client/src/components/pages/car/car-edit/CarEdit.module.css
+++ b/client/src/components/pages/car/car-edit/CarEdit.module.css
@@ -1,44 +1,45 @@
 .create-page {
-    text-align: center;
-    margin-top: 5px;
-    position: relative;
-  }
-  
-  .create-form {
-    padding-top: 1%;
-    display: inline-block;
-    margin-top: 2%;
-    margin-bottom: 4%;
-    background: rgba(0, 0, 0, 0.703);
-    width: 40%;
-    border: 1px solid white;
-    border-radius: 20px;
-  }
-  
-  .create-form label {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    color: white;
-    font-weight: bold;
-  }
-  
-  .create-form input {
-    background: white;
-    border: 1px solid black;
-    border-radius: 10px;
-    font-size: 16px;
-  }
-  
-  .create-form input[type="submit"] {
-    margin-top: 5%;
-    margin-bottom: 5%;
-    width: 40%;
-    font-size: 20px;
-  }
-  
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
-  
+  text-align: center;
+  margin-top: 5px;
+  position: relative;
+}
+
+.create-form {
+  padding-top: 1%;
+  display: inline-block;
+  margin-top: 2%;
+  margin-bottom: 4%;
+  background: rgba(0, 0, 0, 0.703);
+  width: 40%;
+  border: 1px solid white;
+  border-radius: 20px;
+}
+
+.create-form label {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.create-form input {
+  margin-left: 33%;
+  background: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  font-size: 16px;
+  display: block;
+  margin: 10px auto;
+  width: 200px;
+  border: 2px solid lightsteelblue;
+  padding: 5px;
+}
+
+.create-form input[type='submit'] {
+  margin-left: 30%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 40%;
+  font-size: 20px;
+}
