--- a/client/src/components/pages/tuning/CreateParts.module.css
+++ b/client/src/components/pages/tuning/CreateParts.module.css
@@ -2,38 +2,42 @@
    text-align: center;
    margin-top: 5px;
    position: relative;
-   padding-bottom: 6px;
 }
+
 .create-form {
    padding-top: 1%;
    display: inline-block;
-   align-items: center;
-   margin-top: 1%;
+   margin-top: 2%;
+   margin-bottom: 4%;
    background: rgba(0, 0, 0, 0.703);
-   width: 60%;
+   width: 40%;
    border: 1px solid white;
    border-radius: 20px;
 }
-label {
-   margin-top: 20px;
-   margin-bottom: 20px;
+
+.create-form label {
+   margin-top: 10px;
+   margin-bottom: 10px;
    color: white;
    font-weight: bold;
-   display: block;
+   font-size: 25px;
 }
 
-input {
+.create-form input {
+   margin-left: 33%;
    background: white;
    border: 1px solid black;
    border-radius: 10px;
    font-size: 16px;
-}
-.description {
-   width: 460px;
-   height: 100px;
+   display: block;
+   margin: 10px auto;
+   width: 200px;
+   border: 2px solid lightsteelblue;
+   padding: 5px;
 }
 
-input[type='submit'] {
+.create-form input[type='submit'] {
+   margin-left: 30%;
    margin-top: 5%;
    margin-bottom: 5%;
    width: 40%;
