--- a/client/src/components/pages/car/details/Details.module.css
+++ b/client/src/components/pages/car/details/Details.module.css
@@ -75,3 +75,20 @@
    border-radius: 10px;
    padding: 10px;
 }
+.parts {
+   display: inline-block;
+   background-color: #f3f3f2;
+   width: 40%;
+   padding: 1%;
+   margin: 1%;
+}
+
+.parts-img {
+   width: 200px;
+   height: 200px;
+   object-fit: cover;
+}
+
+.parts-body {
+   font-size: 3vmin;
+}
