--- a/client/src/components/pages/car/browse-cars/BrowseCars.module.css
+++ b/client/src/components/pages/car/browse-cars/BrowseCars.module.css
@@ -1,59 +1,27 @@
-@import url('https://fonts.google.com/specimen/Roboto+Condensed');
-
-
-.added-cars {
-   display: flex;
-   justify-content: space-around;
-   flex-wrap: wrap;
+.catalogue {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   gap: 20px;
+   padding: 10px;
 }
 
-.added-cars-in-market {
-   color: white;
-   cursor: pointer;
-   width: 500px;
-   border: 2px solid white;
+.car {
+   box-sizing: border-box;
+   border: 1px solid #ccc;
    text-align: center;
-   background: rgba(0, 0, 0, 0.703);
-   padding-bottom: 10px;
-   border-radius: 10px;
-   margin-left: 20px;
-   margin-bottom: 20px;
-   margin-top: 10px;
-   height: 300px;
-   text-decoration: none;
+   padding: 5px;
+   background-color: rgba(0,0,0,0.3);
+   color: whitesmoke;
 }
-
-.picture-added-cars {
-   width: 430px;
+.car-img {
+   width: 600px;
    height: 200px;
+   object-fit: cover;
+   border-radius: 8px;
+   margin-bottom: 2%;
+   margin-top: 2%;
 }
-
-.picture-added-cars:hover {
+.car-img:hover {
    cursor: pointer;
-   transform: scale(1.1);
-}
-
-.car-name {
-   font-size: 22px;
-   margin-bottom: 0;
-}
-
-.no-cars {
-   text-align: center;
-   position: relative;
-   margin: 0 auto;
-   margin-top: 10%;
-   color: white;
-   background: rgba(0, 0, 0, 0.703);
-   padding: 40px;
-   width: 30%;
-   font-size: 30px;
-   border: 2px solid white;
-}
-
-img {
-   width: 35px;
-   height: 35px;
-   margin-top: 25px;
-   margin-bottom: 10px;
+   transform: scale(1.03);
 }
