--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,3 +1,9 @@
+html,
+body {
+   margin: 0;
+   padding: 0;
+   height: 100%;
+}
 body {
    font-weight: 400;
    font-style: normal;
@@ -22,11 +28,11 @@ body {
    -webkit-text-stroke: 2px black;
 }
 
-li{
+li {
    list-style: none;
 }
 
-a{
+a {
    text-decoration: none;
    color: white;
 }
