--- a/client/src/components/pages/car/car-edit/CarEdit.module.css
+++ b/client/src/components/pages/car/car-edit/CarEdit.module.css
@@ -1,45 +1,49 @@
-.create-page {
+.edit-container {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 600px;
   text-align: center;
-  margin-top: 5px;
-  position: relative;
+  margin: auto;
+  margin-top: 25px;
 }
 
-.create-form {
-  padding-top: 1%;
-  display: inline-block;
-  margin-top: 2%;
-  margin-bottom: 4%;
-  background: rgba(0, 0, 0, 0.703);
-  width: 40%;
-  border: 1px solid white;
-  border-radius: 20px;
-}
-
-.create-form label {
-  margin-top: 10px;
+.edit-form label {
+  font-size: 24px;
+  font-weight: 600;
+  color: #fff; /* Label text color */
   margin-bottom: 10px;
+}
+
+.edit-form input,
+.edit-form textarea {
+  width: 100%;
+  padding: 10px;
+  background-color: #111827;
   color: white;
-  font-weight: bold;
-  font-size: 25px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+  border: 1px solid #111827;
+  border-radius: 4px;
+  resize:none
 }
 
-.create-form input {
-  margin-left: 33%;
-  background: white;
-  border: 1px solid black;
-  border-radius: 10px;
-  font-size: 16px;
-  display: block;
-  margin: 10px auto;
-  width: 200px;
-  border: 2px solid lightsteelblue;
-  padding: 5px;
+.edit-form input::placeholder {
+  color: rgba(255, 255, 255, 0.5);
 }
 
-.create-form input[type='submit'] {
-  margin-left: 30%;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  width: 40%;
-  font-size: 20px;
+.edit-form input[type='submit'] {
+  background-color: #111827;
+  border: 1px solid transparent;
+  border-radius: 12px;
+  color: #ffffff;
+  font-size: 18px;
+  margin-top: 10%;
+  margin-left: auto;
+  width: 100%;
+}
+
+.edit-form input[type='submit']:hover {
+  background-color: #374151;
 }
