--- a/client/src/components/pages/login/Login.module.css
+++ b/client/src/components/pages/login/Login.module.css
@@ -1,45 +1,47 @@
-.login-page {
+.login-container {
+   background-color: rgba(0, 0, 0, 0.5);
+   padding: 20px;
+   border-radius: 8px;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+   width: 600px;
    text-align: center;
-   margin-top: 5px;
-   position: relative;
-   padding-bottom: 6px;
+   margin: auto;
+   margin-top: 100px;
 }
 
-.login-form {
-   padding-top: 1%;
-   display: inline-block;
-   margin-top: 1%;
-   background: rgba(0, 0, 0, 0.703);
-   width: 60%;
-   border: 1px solid white;
-   border-radius: 20px;
-}
-
-label {
-   margin-top: 10px;
+.login-form label {
+   font-size: 24px;
+   font-weight: 600;
+   color: #fff; /* Label text color */
    margin-bottom: 10px;
+ }
+
+.login-form input {
+   width: 100%;
+   padding: 10px;
+   background-color: #111827;
    color: white;
-   font-weight: bold;
-   font-size: 25px;
+   margin-bottom: 15px;
+   box-sizing: border-box;
+   border: 1px solid #111827;
+   border-radius: 4px;
 }
 
-input {
-   margin-left: 33%;
-   background: white;
-   border: 1px solid black;
-   border-radius: 10px;
-   font-size: 16px;
-   display: block;
-   margin: 2px auto;
-   width: 200px;
-   border: 2px solid lightsteelblue;
-   padding: 5px;
+.login-form input::placeholder {
+   color: rgba(255, 255, 255, 0.5);
 }
 
-input[type='submit'] {
-   margin-left: 30%;
-   margin-top: 5%;
-   margin-bottom: 5%;
-   width: 40%;
-   font-size: 20px;
+.login-form input[type='submit'] {
+   background-color: #111827;
+   border: 1px solid transparent;
+   border-radius: 12px;
+   color: #ffffff;
+   font-size: 18px;
+   margin-top: 10%;
+   margin-left:auto;
+   width: 100%;
+}
+
+.login-form input[type='submit']:hover {
+   background-color: #374151;
 }
