--- a/client/src/main.css
+++ b/client/src/main.css
@@ -39,3 +39,12 @@ a {
    text-decoration: none;
    color: white;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: #ffffff;
+   box-shadow: inset 0 0 20px 20px #111827;
+}
