--- a/client/src/components/pages/about/About.module.css
+++ b/client/src/components/pages/about/About.module.css
@@ -1,13 +1,12 @@
-.about{
+.about {
     background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 24px;
+    font-style: italic;
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 800px;
+    width: 1000px;
     text-align: center;
-    margin: auto;
-    margin-top: 100px;
-    margin-left: 550px;
-    color: white;
-    font-size: 24px;
- }
+    margin: 100px auto 0 450px;
+}
